remove: update API
