# api/event/event.pb.validate.go
@@ -1488,373 +1488,6 @@ var _GetEventListRequest_SortOrder_InLookup = map[string]struct{}{
 	"desc": {},
 }
 
-// Validate checks the field values on UpdateEventRequest with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *UpdateEventRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on UpdateEventRequest with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// UpdateEventRequestMultiError, or nil if none found.
-func (m *UpdateEventRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *UpdateEventRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetId()) < 1 {
-		err := UpdateEventRequestValidationError{
-			field:  "Id",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if l := utf8.RuneCountInString(m.GetTitle()); l < 1 || l > 60 {
-		err := UpdateEventRequestValidationError{
-			field:  "Title",
-			reason: "value length must be between 1 and 60 runes, inclusive",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if utf8.RuneCountInString(m.GetSummary()) > 160 {
-		err := UpdateEventRequestValidationError{
-			field:  "Summary",
-			reason: "value length must be at most 160 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if m.GetStatus() != "" {
-
-		if _, ok := _UpdateEventRequest_Status_InLookup[m.GetStatus()]; !ok {
-			err := UpdateEventRequestValidationError{
-				field:  "Status",
-				reason: "value must be in list [draft published archived]",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		}
-
-	}
-
-	if m.GetVisibility() != "" {
-
-		if _, ok := _UpdateEventRequest_Visibility_InLookup[m.GetVisibility()]; !ok {
-			err := UpdateEventRequestValidationError{
-				field:  "Visibility",
-				reason: "value must be in list [public private]",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		}
-
-	}
-
-	if uri, err := url.Parse(m.GetCoverImageUrl()); err != nil {
-		err = UpdateEventRequestValidationError{
-			field:  "CoverImageUrl",
-			reason: "value must be a valid URI",
-			cause:  err,
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	} else if !uri.IsAbs() {
-		err := UpdateEventRequestValidationError{
-			field:  "CoverImageUrl",
-			reason: "value must be absolute",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if m.GetLocation() == nil {
-		err := UpdateEventRequestValidationError{
-			field:  "Location",
-			reason: "value is required",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if all {
-		switch v := interface{}(m.GetLocation()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, UpdateEventRequestValidationError{
-					field:  "Location",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, UpdateEventRequestValidationError{
-					field:  "Location",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetLocation()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return UpdateEventRequestValidationError{
-				field:  "Location",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(m.GetSessions()) < 1 {
-		err := UpdateEventRequestValidationError{
-			field:  "Sessions",
-			reason: "value must contain at least 1 item(s)",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	for idx, item := range m.GetSessions() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, UpdateEventRequestValidationError{
-						field:  fmt.Sprintf("Sessions[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, UpdateEventRequestValidationError{
-						field:  fmt.Sprintf("Sessions[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return UpdateEventRequestValidationError{
-					field:  fmt.Sprintf("Sessions[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	if m.GetDetail() == nil {
-		err := UpdateEventRequestValidationError{
-			field:  "Detail",
-			reason: "value is required",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if all {
-		switch v := interface{}(m.GetDetail()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, UpdateEventRequestValidationError{
-					field:  "Detail",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, UpdateEventRequestValidationError{
-					field:  "Detail",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetDetail()).(interface{ Validate() error }); ok {
-		if err := v.Validate(); err != nil {
-			return UpdateEventRequestValidationError{
-				field:  "Detail",
-				reason: "embedded message failed validation",
-				cause:  err,
-			}
-		}
-	}
-
-	if len(m.GetFaq()) > 20 {
-		err := UpdateEventRequestValidationError{
-			field:  "Faq",
-			reason: "value must contain no more than 20 item(s)",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	for idx, item := range m.GetFaq() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, UpdateEventRequestValidationError{
-						field:  fmt.Sprintf("Faq[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, UpdateEventRequestValidationError{
-						field:  fmt.Sprintf("Faq[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return UpdateEventRequestValidationError{
-					field:  fmt.Sprintf("Faq[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	if len(errors) > 0 {
-		return UpdateEventRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// UpdateEventRequestMultiError is an error wrapping multiple validation errors
-// returned by UpdateEventRequest.ValidateAll() if the designated constraints
-// aren't met.
-type UpdateEventRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UpdateEventRequestMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UpdateEventRequestMultiError) AllErrors() []error { return m }
-
-// UpdateEventRequestValidationError is the validation error returned by
-// UpdateEventRequest.Validate if the designated constraints aren't met.
-type UpdateEventRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e UpdateEventRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e UpdateEventRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e UpdateEventRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e UpdateEventRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e UpdateEventRequestValidationError) ErrorName() string {
-	return "UpdateEventRequestValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e UpdateEventRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sUpdateEventRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = UpdateEventRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = UpdateEventRequestValidationError{}
-
-var _UpdateEventRequest_Status_InLookup = map[string]struct{}{
-	"draft":     {},
-	"published": {},
-	"archived":  {},
-}
-
-var _UpdateEventRequest_Visibility_InLookup = map[string]struct{}{
-	"public":  {},
-	"private": {},
-}
-
 // Validate checks the field values on PatchEventRequest with the rules defined
 // in the proto definition for this message. If any rules are violated, the
 // first error encountered is returned, or nil if there are no violations.
